# bevy_auto_update

./: Cargo.toml  README.md
src/: lib.rs  plugin.rs  resources.rs  systems.rs  updater.rs  updater_dry_run.rs  updater_github.rs
